--- a/plugin.xml
+++ b/plugin.xml
@@ -2,17 +2,17 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="de.appplant.cordova.plugin.local-notification"
+        id="br.ajmarques.plugins.local-notification"
         version="0.7.3dev">
 
     <name>LocalNotification</name>
 
     <description>A bunch of local-notification plugins for Cordova 3.x.x</description>
-    <repo>https://github.com/katzer/cordova-plugin-local-notifications.git</repo>
+    <repo>https://github.com/acassio/cordova-plugin-local-notifications.git</repo>
     <keywords>notification, local notification, alarm, scheduler, tile, live tiles, ios, android, windows phone 8, wp8</keywords>
     <license>Apache 2.0</license>
 
-    <author>Sebastián Katzer</author>
+    <author>Acássio Marques</author>
 
     <engines>
         <engine name="cordova" version=">=3.0.0" />
@@ -41,7 +41,7 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="LocalNotification">
-                <param name="android-package" value="de.appplant.cordova.plugin.localnotification.LocalNotification"/>
+                <param name="android-package" value="br.ajmarques.cordova.plugin.localnotification.LocalNotification"/>
             </feature>
         </config-file>
 
@@ -52,14 +52,14 @@
              * Android notification bar. The notification uses the default notification
              * sound and it vibrates the phone.
             -->
-            <receiver android:name="de.appplant.cordova.plugin.localnotification.Receiver" />
+            <receiver android:name="br.ajmarques.cordova.plugin.localnotification.Receiver" />
 
             <!--
              * This class is triggered upon reboot of the device. It needs to re-register
              * the alarms with the AlarmManager since these alarms are lost in case of
              * reboot.
              -->
-            <receiver android:name="de.appplant.cordova.plugin.localnotification.Restore" >
+            <receiver android:name="br.ajmarques.cordova.plugin.localnotification.Restore" >
                 <intent-filter>
                     <action android:name="android.intent.action.BOOT_COMPLETED" />
                 </intent-filter>
@@ -70,7 +70,7 @@
              * The activity calls the background callback and brings the launch inten
              * up to foreground.
             -->
-            <activity android:name="de.appplant.cordova.plugin.localnotification.ReceiverActivity" android:launchMode="singleInstance" />
+            <activity android:name="br.ajmarques.cordova.plugin.localnotification.ReceiverActivity" android:launchMode="singleInstance" />
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
@@ -78,11 +78,11 @@
             <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
         </config-file>
 
-        <source-file src="src/android/LocalNotification.java" target-dir="src/de/appplant/cordova/plugin/localnotification" />
-        <source-file src="src/android/Receiver.java"          target-dir="src/de/appplant/cordova/plugin/localnotification" />
-        <source-file src="src/android/Options.java"           target-dir="src/de/appplant/cordova/plugin/localnotification" />
-        <source-file src="src/android/Restore.java"           target-dir="src/de/appplant/cordova/plugin/localnotification" />
-        <source-file src="src/android/ReceiverActivity.java"  target-dir="src/de/appplant/cordova/plugin/localnotification" />
+        <source-file src="src/android/LocalNotification.java" target-dir="src/br/ajmarques/cordova/plugin/localnotification" />
+        <source-file src="src/android/Receiver.java"          target-dir="src/br/ajmarques/cordova/plugin/localnotification" />
+        <source-file src="src/android/Options.java"           target-dir="src/br/ajmarques/cordova/plugin/localnotification" />
+        <source-file src="src/android/Restore.java"           target-dir="src/br/ajmarques/cordova/plugin/localnotification" />
+        <source-file src="src/android/ReceiverActivity.java"  target-dir="src/br/ajmarques/cordova/plugin/localnotification" />
     </platform>
 
     <!-- wp8 -->
