atualizacao da descricao do plugin

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,11 +3,11 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="br.ajmarques.plugins.local-notification"
-        version="0.7.3dev">
+        version="0.0.1dev">
 
     <name>LocalNotification</name>
 
-    <description>A bunch of local-notification plugins for Cordova 3.x.x</description>
+    <description>Add Local Notifications in your app</description>
     <repo>https://github.com/acassio/cordova-plugin-local-notifications.git</repo>
     <keywords>notification, local notification, alarm, scheduler, tile, live tiles, ios, android, windows phone 8, wp8</keywords>
     <license>Apache 2.0</license>
